# cognix

./: .env.example  .gitignore  README.md  implementation_plan.md  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 66249afdd04b_create_users_table.py  c515ae3dc04c_add_chat_and_document_chunk_tables.py  f9e05efaa9aa_create_session_models.py
backend/app/: main.py
backend/app/api/: auth.py  sessions.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/database/: connection.py
backend/app/models/: __init__.py  chat.py  session.py  user.py
backend/app/schemas/: __init__.py  auth.py  session.py
backend/app/services/: __init__.py  chat_service.py  embedding_service.py  evaluator_service.py  extraction_service.py  planner_service.py  report_service.py  retrieval_service.py  search_service.py  sufficiency_service.py  summarization_service.py
