[project]
name = "cognix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "beautifulsoup4>=4.14.3",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.4",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "tavily-python>=0.7.24",
    "uvicorn[standard]>=0.48.0",
]
